# defi-quest-engine

./: .gitignore  Anchor.toml  DEPLOYMENT.md  LICENSE  ONCHAIN_INTEGRATION.md  README.md  fix.py  generate-badges.js  package-lock.json  package.json  patch.js  react-tree.txt  supabase-migration.sql  supabase-phase5-prophecies.sql  supabase-quickfix.sql  supabase-schema.sql  test_expired_prophecies.sql  tsconfig.json  turbo.json
.github/workflows/: deploy.yml
docs/: OPTION_B_INTEGRATION.md  api-reference.md  getting-started.md  prophecies-architecture.md
examples/defi-dashboard/: index.html
examples/gaming-dapp/: index.html
examples/simple-dapp/: index.html
programs/defi_quest/: Cargo.toml
programs/defi_quest/.cargo/: config.toml
programs/defi_quest/src/: lib.rs
scripts/: debug-supabase.ts  demo-integration.ts  generate-keypair.js  run-orchestrator.js  run-orchestrator.ts  setup-localnet-raw.ts  setup-localnet.ts  setup-solana-tools.ps1  test-core-direct.ts  test-metaplex-local.ts  test-stake.ts
tests/: bankrun-integration.ts  bankrun-test.ts  defi-quest.ts
