[package]
name = "defi_quest"
version = "0.1.0"
description = "DeFi Quest Engine - Mission/Quest system for Solana dApps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defi_quest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
